--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
         >
       </div>
     </section>
-    <section>
+    <section class="experience-area">
       <h1>Experiences</h1>
       <div class="flexible-container">
-        <div class="half-width">
-          <h1>Full Stack Developer</h1>
-          <h3>2021-Present | Pro Level Developer</h3>
+        <div id="full-stack-experience" class="experience-item">
+          <h2>Full Stack Developer</h2>
+          <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
           <p>
             I am the master of HTML, CSS and Javascript. I know everything
             needed to make a website function, efficient. I didn't stop with the
@@ -62,9 +62,9 @@
             100% web solution.
           </p>
         </div>
-        <div class="half-width">
-          <h1>Baby Web Developer</h1>
-          <h3>2020-2021 | Programming Hero Learner</h3>
+        <div id="web-dev-experience" class="experience-item">
+          <h2>Baby Web Developer</h2>
+          <h3 class="orange-color">2020-2021 | Programming Hero Learner</h3>
           <p>
             They didn't offer me a job. But I made myself as a remove web
             developer. I made their website and showed it to them. They liked
@@ -74,5 +74,8 @@
         </div>
       </div>
     </section>
+    <footer>
+      <p>&copy Peter Parker 2021, a Programming Hero initative.</p>
+    </footer>
   </body>
 </html>
